--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <div class="logo">
+      <div class="logo" onclick="window.location.href='document.html'">
         <div class="logo-circle"></div>
         <h1>GoPlant</h1>
       </div>
       <div class="nav-buttons">
-        <button class="login-btn">Login</button>
-        <button class="signup-btn">Sign Up</button>
+        <button class="login-btn" onclick="window.location.href='alert.html'">Login</button>
+        <button class="signup-btn" onclick="window.location.href='suggestions.html'">Sign Up</button>
       </div>
     </nav>
 
@@ -136,7 +136,7 @@
         <li>• Giving different watering suggestions per week</li>
         <li>• Watering guidance document</li>
       </ul>
-      <button class="try-btn">Try for Free</button>
+      <button class="try-btn" onclick="window.location.href='chatbot.html'">Try for Free</button>
     </main>
   </body>
 </html>
